Thu Oct 18 14:11:08 2012  Koichi Sasada  <ko1@atdot.net>

	* class.c (rb_define_frameless_method): rename from
	  rb_define_method_fast(). Defined method with this C API
	  does not make a method frame. It is bit lightweight than
	  ordinal C functions. Now only 0 or 1 argc are permitted.

	* method.h (VM_METHOD_TYPE_CFUNC_FRAMELESS): rename macro name
	  from VM_METHOD_TYPE_CFUNC_FAST.

	* vm_insnhelper.c, vm_method.c: rename related functions.

	* proc.c (rb_method_entry_arity): catch up above changes.

Thu Oct 18 10:30:34 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (assignable_gen): fail if yyerror occurred.  fix a bug in
	  r36973.

Thu Oct 18 09:23:03 2012  Aaron Patterson <aaron@tenderlovemaking.com>

	* hash.c (initialize_copy): duping should rehash the hash.

	* test/ruby/test_hash.rb: added a test to ensure rehash.

Wed Oct 17 21:16:47 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* common.mk (WPROGRAM): need same dependencies as PROGRAM.

	* cygwin/GNUmakefile.in (uncommon.mk): move include position
	  below WPROGRAM definition to be defined in uncommon.mk.

	* ext/extmk.rb (all, static): fix make rubyw.exe failure with make -jN.
	  If make of ruby.exe and rubyw.exe run in parallel, link dll and link
	  exe run in parallel, which causes link failure on mingw. To fix this,
	  we make ruby.exe and rubyw.exe in one make process.
	  [ruby-core:48007] [Bug #7165]

Wed Oct 17 16:25:34 2012  Koichi Sasada  <ko1@atdot.net>

	* benchmark/bm_vm2_method_missing.rb: add a benchmark to measure
	  performance of invoking `method_missing'.

Wed Oct 17 16:23:17 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_getivar): fix to use `aux.index' instead of
	  `aux.opt_pc'.

Wed Oct 17 16:03:54 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method_missing): make a refactoring
	  about method_missing process. Use `vm_call_method()' to invoke
	  `method_missing' method instead of `rb_funcall2()'.